--- a/css/blocks/social.scss
+++ b/css/blocks/social.scss
@@ -1,11 +1,11 @@
 .social__item {
-    margin-left: 20px;
+    margin-left: rem(20px);
     display: inline-block;
 }
 
 .social__icon {
-    width: 20px;
-    height: 20px;
+    width: rem(20px);
+    height: rem(20px);
     fill: $social-grey;    
     &:hover {
         fill: $black;
