--- a/css/blocks/accordeon.scss
+++ b/css/blocks/accordeon.scss
@@ -3,22 +3,18 @@
     justify-content: space-between;
     width: 100%;
     align-items: flex-start;
-    min-height: 444px;
+    min-height: rem(444px);
 }
 
 .accordeon__item {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 223px;
+    max-width: rem(220px);
+    position: relative;
 }
 
-.accordeon__pic {
-    width: 223px;
-    height: 292px;
-    margin-bottom: 25px;
-    
-}
+
 
 .accordeon__collapsible--active {
     .accordeon__arrow-icon {
@@ -30,21 +26,21 @@
 }
 
 .accordeon__unfolder {
-    margin-bottom: 12px;
     width: 100%;
     text-align: center;
+    position: relative;
     h3 {
         color: $title-dark-grey;
-        font-size: 21px;
+        font-size: rem(21px);
         font-weight: $medium;
         display: inline-block;
-        margin-right: 5px;
+        margin-right: rem(5px);
     }
 }
 
 .accordeon__arrow-icon {
-    height: 9px;
-    width: 9px;
+    height: rem(9px);
+    width: rem(9px);
     fill: $btn-green;
     display: inline-block;
 }
@@ -53,10 +49,15 @@
     text-align: center;
     height: 0;
     overflow: hidden;
+    position: absolute;
+    top: calc(100% + rem(12px));
+    left: 0;
+    right: 0;
+    margin: auto;
     h4{
         color: $dark-brown;
-        font-size: 18px;
-        margin-bottom: 7px;
+        font-size: rem(18px);
+        margin-bottom: rem(7px);
     }
     p {
         @include grey-text;
