--- a/css/blocks/fixed-menu.scss
+++ b/css/blocks/fixed-menu.scss
@@ -7,11 +7,11 @@
 
 .fixed-menu__dot {
   display: block;
-  height: 16px;
-  width: 16px;
+  height: rem(16px);
+  width: rem(16px);
   border-radius: 50%;
-  border: 1px solid transparent;
-  margin-bottom: 5px;
+  border: rem(1px) solid transparent;
+  margin-bottom: rem(5px);
   position: relative;
 
   &--active {
@@ -20,8 +20,8 @@
 
   &:before {
     content: '';
-    width: 6px;
-    height: 6px;
+    width: rem(6px);
+    height: rem(6px);
     background-color: $white;
     border-radius: 50%;
     position: absolute;
