--- a/css/blocks/hero.scss
+++ b/css/blocks/hero.scss
@@ -1,10 +1,10 @@
 .hero {
     background: $bg-light-blue url("../img/bg/hero-bg-branch.png") no-repeat right;
-    padding-top: 24px;
-    padding-bottom: 45px;
+    padding-top: rem(24px);
+    padding-bottom: rem(45px);
     &::after {
         @include bg-slice(57px, 98px, "../img/bg/bg-single-leaf.png");
-        bottom: -45px;
+        bottom: rem(-45px);
         left: 2.8vw;
     }
 }
@@ -19,13 +19,14 @@
 
 .hero__main {
     display: flex;
+    // justify-content: space-between;
 }
 
 .hero__promo {
-    margin-right: 77px;
+    margin-right: 7.3%;
     display: flex;
     flex-direction: column;
-    margin-top: 85px;
+    margin-top: rem(85px);
 }
 
 .hero__product {
@@ -33,52 +34,56 @@
 
     &::after {
         @include bg-slice(460px, 341px, "../img/bg/hero-berries.png");
-        bottom: -117px;
-        left: 60px;
+        bottom: rem(-117px);
+        left: rem(60px);
     }
 }
 
+.hero__product-pic {
+    width: rem(503px);
+}
+
 .hero__title {
-    font-size: 60px;
-    line-height: 60px;
+    font-size: rem(60px);
+    line-height: rem(60px);
     font-weight: bold;
     text-transform: uppercase;
-    margin-bottom: 10px;
+    margin-bottom: rem(10px);
 }
 
 .hero__info {
-    font-size: 21px;
+    font-size: rem(21px);
     text-transform: none;
     font-weight: normal;
     line-height: 1.2;
-    max-width: 350px;
-    margin-bottom: 30px;
+    max-width: rem(350px);
+    margin-bottom: rem(30px);
 }
 
 .hero__features {
     display: flex;
     justify-content: space-between;
-    max-width: 480px;
+    max-width: rem(480px);
     z-index: 2;
 }
 
 .hero__feature-snippet {
-    font-size: 16px;
+    font-size: rem(16px);
     display: flex;
-    margin-right: 45px;
+    margin-right: rem(45px);
 }
 
 .feature-snippet__info {
-    width: 70px;
+    width: rem(70px);
 }
 
 .hero__feature-icon {
-    width: 50px;
-    height: 50px;
+    width: rem(50px);
+    height: rem(50px);
     //Вытащил следующие стили из svg-файлов, цвет поменял на нужный, без них нормально не отрисовывается
     fill: none;
     stroke: $icon-light-blue;
     stroke-width: 0.7;
     stroke-miterlimit: 10;
-    margin-right: 8px;
+    margin-right: rem(8px);
 }
